# PharmaOffice

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  RCa10276  README.md  conanfile.txt  diff.txt  pharmaoffice.aps
base/: CMakeLists.txt
base/bcrypt/: CMakeLists.txt
base/include/: Data.h  currency.h  data_tuple.h  database.h  databasemysql.h  datareq.h  datatree.h  errc.h  net.h  netmanager.h  poflz4.h  query.h  relation.h  serialport.h  taskmanager.h
base/src/: Data.cpp  currency.cpp  database.cpp  databasemysql.cpp  errc.cpp  netmanager.cpp  packages.cpp  serialport.cpp
forms/: AddPatient.fbp  AddProductDialog.cpp  AddProductDialog.fbp  AddProductDialog.h  InventoryDialog.fbp  Modules.cpp  Modules.fbp  Modules.h  NumberGrid.fbp  OrderListView.fbp  Packs.fbp  PaymentDialog.fbp  PharamcyRegistration.fbp  ProductInfo.fbp  ProductView.fbp  RegisterPharmacy.fbp  RegistrationDialog.fbp  SaleView.fbp  SalesSettings.fbp  SignInDialog.fbp  StockCheck.cpp  StockCheck.fbp  StockCheck.h
formulary/: CMakeLists.txt
formulary/include/: formulary.h  section.h
include/: Account.h  AccountReg.h  AddPatient.h  AddProductDialog.h  Application.h  ArtProvider.h  AuditManager.h  AuditView.h  AuiTheme.h  ChartDialog.h  CheckoutDialog.h  DataModel.h  DataObject.h  DataTreeModel.h  DataView.h  DispensaryView.h  DropTarget.h  ExpiredView.h  InventoryDialog.h  LabelInfo.h  LogSink.h  MainFrame.h  Modules.h  OrderView.h  PackView.h  PatientManager.h  PatientView.h  Pharmacy.h  PharmacySetupWizard.h  PofPch.h  PoisonBookManager.h  PoisonBookView.h  PrescriptionView.h  PrintManager.h  Printout.h  ProductInfo.h  ProductManager.h  ProductView.h  RegisterPharmacy.h  Reports.h  (+16 more)
include/controls/: Thumbnail.h  ThumbnailCtrl.h  ThumbnailEvent.h  ThumbnailItem.h
notes/: Formulary.txt  Inventories.txt  database.txt
packaging/windows/: pharmaoffice.iss
src/: Account.cpp  AccountReg.cpp  AddPatient.cpp  AddProductDialog.cpp  Application.cpp  ArtProvider.cpp  AuditManager.cpp  AuditView.cpp  AuiTheme.cpp  ChartDialog.cpp  CheckoutDialog.cpp  DataModel.cpp  DataObject.cpp  DataTreeModel.cpp  DispensaryView.cpp  DropTarget.cpp  ExpiredView.cpp  InventoryDialog.cpp  LogSink.cpp  MainFrame.cpp  Modules.cpp  OrderView.cpp  PackView.cpp  PatientManager.cpp  PatientView.cpp  Pharmacy.cpp  PharmacySetupWizard.cpp  PoisonBookManager.cpp  PoisonBookView.cpp  PrescriptionView.cpp  PrintManager.cpp  Printout.cpp  ProductInfo.cpp  ProductManager.cpp  ProductView.cpp  RegisterPharmacy.cpp  Reports.cpp  Reports.h  ResetPassword.cpp  SaleManager.cpp  (+11 more)
src/controls/: Thumbnail.cpp  ThumbnailCtrl.cpp  ThumbnailEvent.cpp  ThumbnailItem.cpp
